--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -10,17 +10,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
-
-      - name: Debug workspace (prove paths)
-        run: |
-          pwd
-          ls -la
-          find . -maxdepth 2 -name app.json -o -name eas.json -o -name package.json
 
       - name: Install dependencies
         run: npm ci
@@ -33,19 +29,10 @@ jobs:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
         run: eas whoami
 
-      - name: Write App Store Connect API key (.p8)
-        run: |
-          mkdir -p .asc
-          printf "%s" "${{ secrets.ASC_KEY_P8 }}" > .asc/AuthKey.p8
-          ls -la .asc
-
-      - name: Build and auto-submit to TestFlight
+      # NOTE: We are NOT passing --asc-* flags because your EAS CLI in Actions
+      # rejected them as "Unexpected arguments". We’ll build first, then submit.
+      - name: Build iOS (production)
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-          ASC_KEY_ID: ${{ secrets.ASC_KEY_ID }}
-          ASC_ISSUER_ID: ${{ secrets.ASC_ISSUER_ID }}
-        run: |
-          eas build -p ios --profile production --non-interactive --auto-submit \
-            --asc-api-key-path .asc/AuthKey.p8 \
-            --asc-api-key-id "$ASC_KEY_ID" \
-            --asc-api-issuer-id "$ASC_ISSUER_ID"
+        run: eas build -p ios --profile production --non-interactive
+
