Add non-interactive flag to iOS build command

--- a/.github/workflows/ios-testflight.yml
+++ b/.github/workflows/ios-testflight.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build iOS (production)
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-        run: eas build -p ios --profile production
+        run: eas build -p ios --profile production --non-interactive
+
 
 
