--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,8 @@
       "distribution": "store",
       "ios": {
         "credentialsSource": "remote",
-        "autoIncrement": "buildNumber"
+        "autoIncrement": "buildNumber",
+        "image": "macos-monterey-12.4-xcode-13.4"
       },
       "env": {
         "SENTRY_ALLOW_FAILURE": "true"
